--- a/demos/ann_demo.ipynb
+++ b/demos/ann_demo.ipynb
@@ -640,7 +640,7 @@
     "    plt.ylabel(\"True Labels\")\n",
     "    plt.show()\n",
     "\n",
-    "plot_tl_confusion_matrix(model, test_generator)"
+    "# plot_tl_confusion_matrix(model, test_generator)"
    ]
   },
   {
@@ -649,7 +649,48 @@
    "id": "9e76909b-bbcc-48ee-b531-90d0f6584acb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "actual =  test_generator.labels\n",
+    "preds = np.argmax(model.predict(test_generator), axis=1)\n",
+    "cfmx = confusion_matrix(actual, preds)\n",
+    "\n",
+    "sns.heatmap(cfmx, annot=True, cmap='Blues',\n",
+    "    xticklabels=list(test_generator.class_indices.keys()),\n",
+    "        fmt='.0f', \n",
+    "        yticklabels=list(test_generator.class_indices.keys())\n",
+    "        )\n",
+    "\n",
+    "plt.xlabel(\"Predictions\")\n",
+    "plt.ylabel(\"True Labels\")\n",
+    "plt.show()\n",
+    "\n",
+    "acc = accuracy_score(actual, preds)\n",
+    "f1 = f1_score(actual, preds, average = \"micro\")\n",
+    "prec = precision_score(actual, preds, average = \"micro\")\n",
+    "rec = recall_score(actual, preds, average = \"micro\")\n",
+    "\n",
+    "print(\"Results:\")\n",
+    "print(\"-------------------------\")\n",
+    "print(\"Model name:\",model_name)\n",
+    "print(\"Classification type:\",classification_type)\n",
+    "print(\"Classifier:\",classifier)\n",
+    "print(\"Image preprocess function:\",img_process_function)\n",
+    "\n",
+    "print(\"-------------------------\")\n",
+    "print(\"Batch size:\",batch_size)\n",
+    "print(\"Learning rate:\",learning_rate)\n",
+    "print(\"Number of Epoch:\",epochs)\n",
+    "\n",
+    "if model_name == \"DenseNet121\":\n",
+    "    print(\"Chexnet weights status:\",use_chex_weights)\n",
+    "    \n",
+    "print(\"Classification Metrics:\")\n",
+    "print(\"-------------------------\")\n",
+    "print(\"Accuracy: \",acc)\n",
+    "print(\"F1 score:\",f1)\n",
+    "print(\"Precision:\",prec)\n",
+    "print(\"Recall:\",rec)"
+   ]
   }
  ],
  "metadata": {
