--- a/siim-covid-tl-svm-classifier.ipynb
+++ b/siim-covid-tl-svm-classifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -405,16 +405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T12:59:00.487616Z",
-     "iopub.status.busy": "2022-05-05T12:59:00.487268Z",
-     "iopub.status.idle": "2022-05-05T12:59:04.904784Z",
-     "shell.execute_reply": "2022-05-05T12:59:04.90381Z",
-     "shell.execute_reply.started": "2022-05-05T12:59:00.487587Z"
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_last_conv_layer(base_model, model_name):\n",
@@ -441,7 +433,7 @@
     "\n",
     "if (model_name == \"DenseNet121\") & use_chex_weights:\n",
     "    \n",
-    "    chex_weights_path = '../input/chexnet-weights/brucechou1983_CheXNet_Keras_0.3.0_weights.h5'\n",
+    "    chex_weights_path = 'brucechou1983_CheXNet_Keras_0.3.0_weights.h5'\n",
     "    out = Dense(14, activation='sigmoid')(base_model.output)\n",
     "    base_model = Model(inputs=base_model.input, outputs=out)\n",
     "    base_model.load_weights(chex_weights_path)\n",
@@ -466,16 +458,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T12:59:04.907756Z",
-     "iopub.status.busy": "2022-05-05T12:59:04.907387Z",
-     "iopub.status.idle": "2022-05-05T13:41:50.051278Z",
-     "shell.execute_reply": "2022-05-05T13:41:50.050666Z",
-     "shell.execute_reply.started": "2022-05-05T12:59:04.90771Z"
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n"
+     ]
+    }
+   ],
    "source": [
     "base_model.trainable = False\n",
     "\n",
@@ -529,15 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:41:50.052954Z",
-     "iopub.status.busy": "2022-05-05T13:41:50.052608Z",
-     "iopub.status.idle": "2022-05-05T13:41:50.094104Z",
-     "shell.execute_reply": "2022-05-05T13:41:50.093233Z",
-     "shell.execute_reply.started": "2022-05-05T13:41:50.052918Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "output = Dense(feature_number, activation=\"relu\", name = \"features\")(output)\n",
@@ -547,15 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:41:50.095873Z",
-     "iopub.status.busy": "2022-05-05T13:41:50.095515Z",
-     "iopub.status.idle": "2022-05-05T13:41:51.919956Z",
-     "shell.execute_reply": "2022-05-05T13:41:51.919104Z",
-     "shell.execute_reply.started": "2022-05-05T13:41:50.095839Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_images_for_feature_extraction(classifier, classification_type, img_process_function, df_train, df_test, img_dir, img_size, batch_size, validation_split = 0.15):\n",
@@ -635,15 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:41:51.921907Z",
-     "iopub.status.busy": "2022-05-05T13:41:51.921607Z",
-     "iopub.status.idle": "2022-05-05T13:42:14.689865Z",
-     "shell.execute_reply": "2022-05-05T13:42:14.689246Z",
-     "shell.execute_reply.started": "2022-05-05T13:41:51.921866Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def prepare_images_for_SVM(train_generator, test_generator, train_num, val_num):\n",
@@ -692,15 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:42:14.691959Z",
-     "iopub.status.busy": "2022-05-05T13:42:14.691242Z",
-     "iopub.status.idle": "2022-05-05T13:42:49.885509Z",
-     "shell.execute_reply": "2022-05-05T13:42:49.884816Z",
-     "shell.execute_reply.started": "2022-05-05T13:42:14.69192Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def extract_features_from_images(model, x_tr, x_val, y_tr, y_val):\n",
@@ -726,15 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:42:49.88789Z",
-     "iopub.status.busy": "2022-05-05T13:42:49.887321Z",
-     "iopub.status.idle": "2022-05-05T13:42:49.896278Z",
-     "shell.execute_reply": "2022-05-05T13:42:49.895464Z",
-     "shell.execute_reply.started": "2022-05-05T13:42:49.887847Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def print_feature_shapes(x_train, x_test, y_train, y_test):\n",
@@ -758,15 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:42:49.89845Z",
-     "iopub.status.busy": "2022-05-05T13:42:49.898034Z",
-     "iopub.status.idle": "2022-05-05T13:43:47.661858Z",
-     "shell.execute_reply": "2022-05-05T13:43:47.660826Z",
-     "shell.execute_reply.started": "2022-05-05T13:42:49.898293Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def fit_cross_models(x_train, x_test, y_train, y_test, svm_hyp_search):\n",
@@ -816,15 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:43:47.663765Z",
-     "iopub.status.busy": "2022-05-05T13:43:47.663448Z",
-     "iopub.status.idle": "2022-05-05T13:43:47.960317Z",
-     "shell.execute_reply": "2022-05-05T13:43:47.95919Z",
-     "shell.execute_reply.started": "2022-05-05T13:43:47.663719Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Prints best SVM scores and estimator\n",
@@ -851,15 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:43:47.961745Z",
-     "iopub.status.busy": "2022-05-05T13:43:47.961521Z",
-     "iopub.status.idle": "2022-05-05T13:43:47.974279Z",
-     "shell.execute_reply": "2022-05-05T13:43:47.972607Z",
-     "shell.execute_reply.started": "2022-05-05T13:43:47.961719Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if svm_hyp_search == \"grid\":\n",
@@ -930,15 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:43:47.977288Z",
-     "iopub.status.busy": "2022-05-05T13:43:47.976992Z",
-     "iopub.status.idle": "2022-05-05T13:43:48.290712Z",
-     "shell.execute_reply": "2022-05-05T13:43:48.290162Z",
-     "shell.execute_reply.started": "2022-05-05T13:43:47.977256Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot_svm_confusion_matrix(svc, x_test, y_test):\n",
@@ -964,15 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:43:48.291987Z",
-     "iopub.status.busy": "2022-05-05T13:43:48.291704Z",
-     "iopub.status.idle": "2022-05-05T13:43:48.374173Z",
-     "shell.execute_reply": "2022-05-05T13:43:48.37338Z",
-     "shell.execute_reply.started": "2022-05-05T13:43:48.291961Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "actual =  y_test\n",
@@ -995,43 +908,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:43:48.375484Z",
-     "iopub.status.busy": "2022-05-05T13:43:48.375235Z",
-     "iopub.status.idle": "2022-05-05T13:43:48.384313Z",
-     "shell.execute_reply": "2022-05-05T13:43:48.383482Z",
-     "shell.execute_reply.started": "2022-05-05T13:43:48.375454Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Weighted ROC AUC Score\",roc_auc_score(le.fit_transform(actual), le.fit_transform(preds), average=\"weighted\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-05T13:43:48.386242Z",
-     "iopub.status.busy": "2022-05-05T13:43:48.385758Z",
-     "iopub.status.idle": "2022-05-05T13:43:48.395509Z",
-     "shell.execute_reply": "2022-05-05T13:43:48.394893Z",
-     "shell.execute_reply.started": "2022-05-05T13:43:48.3862Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "preds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
