--- a/siim-covid-tl-svm-classifier.ipynb
+++ b/siim-covid-tl-svm-classifier.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SIIM Data Covid-19 SVM classifier\n",
+    "## SIIM Data Covid-19 with CNN + SVM classifier\n",
     "#### Configuration"
    ]
   },
