--- a/siim-covid-tl-ann-classifier.ipynb
+++ b/siim-covid-tl-ann-classifier.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "from tensorflow.keras.layers import InputLayer, BatchNormalization, Dropout, Flatten, Dense, Activation, MaxPool2D, Conv2D\n",
     "\n",
-    "from tensorflow.keras.applications import VGG16, VGG19, InceptionV3, NASNetMobile, NASNetLarge, DenseNet121, ResNet50, Xception, InceptionResNetV2, EfficientNetB7\n",
+    "from tensorflow.keras.applications import InceptionV3, DenseNet121, ResNet50, Xception \n",
     "\n",
     "import importlib\n",
     "from skimage import exposure\n",
